# coralogix-mcp

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
coralogix_mcp/: __init__.py  cli.py  client.py  server.py
coralogix_mcp/common/: __init__.py  logger.py
tests/: conftest.py  test_client.py
